# internal/api/grpc/submit_withdrawal.go
@@ -6,20 +6,19 @@ import (
 
 	"github.com/Bridgeless-Project/relayer-svc/internal/api/common"
 	apiCtx "github.com/Bridgeless-Project/relayer-svc/internal/api/ctx"
+	"github.com/Bridgeless-Project/relayer-svc/internal/api/types"
 	internalTypes "github.com/Bridgeless-Project/relayer-svc/internal/types"
 	"github.com/pkg/errors"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
-	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-func (i Implementation) SubmitWithdrawal(ctx context.Context, identifier *internalTypes.DepositIdentifier) (*emptypb.Empty, error) {
+func (i Implementation) SubmitWithdrawal(ctx context.Context, identifier *internalTypes.DepositIdentifier) (*types.SubmitResponse, error) {
 	var (
 		clients     = apiCtx.Clients(ctx)
 		logger      = apiCtx.Logger(ctx)
 		connector   = apiCtx.Connector(ctx)
 		broadcaster = apiCtx.Broadcaster(ctx)
-		db          = apiCtx.DB(ctx)
 	)
 
 	err := common.ValidateIdentifier(identifier)
@@ -41,17 +40,7 @@ func (i Implementation) SubmitWithdrawal(ctx context.Context, identifier *intern
 		return nil, status.Error(codes.InvalidArgument, "invalid transaction hash")
 	}
 
-	deposit, err := db.Get(common.ToDbIdentifier(identifier))
-	if err != nil {
-		logger.Errorf("failed to get deposit from database: %v", err)
-		return nil, status.Error(codes.Internal, "unable to process withdrawal")
-	}
-
-	if deposit != nil {
-		return nil, status.Error(codes.AlreadyExists, "deposit already exists")
-	}
-
-	deposit, err = connector.GetDeposit(ctx, common.ToDbIdentifier(identifier))
+	deposit, err := connector.GetDeposit(ctx, common.ToDbIdentifier(identifier))
 	if err != nil {
 		if strings.Contains(err.Error(), "not found") {
 			return nil, status.Error(codes.NotFound, "deposit not found")
@@ -60,7 +49,8 @@ func (i Implementation) SubmitWithdrawal(ctx context.Context, identifier *intern
 		return nil, status.Error(codes.Internal, "unable to process withdrawal")
 	}
 
-	if err := broadcaster.Broadcast(ctx, *deposit); err != nil {
+	id, err := broadcaster.Broadcast(ctx, *deposit)
+	if err != nil {
 		if errors.Is(err, internalTypes.ErrFailedToBroadcast) {
 			return nil, status.Error(codes.Internal, "failed to broadcast withdrawal")
 		}
@@ -68,5 +58,5 @@ func (i Implementation) SubmitWithdrawal(ctx context.Context, identifier *intern
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
-	return &emptypb.Empty{}, nil
+	return &types.SubmitResponse{WithdrawalId: *id}, nil
 }
